force-app/main/default/objects/ltng_mockupSettings__c/ltng_mockupSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for working with Lightning Mockups.
(Such as invalidating caches to simplify workshops)</description>
    <label>Lightning Mockup Settings</label>
</CustomObject>