force-app/main/default/objects/ltng_mockupSettings__c/fields/Enable_Mock_Image_Caching__c.field-meta.xml
<CustomField>
    <fullName>Enable_Mock_Image_Caching__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, then mockup images will be cached, allowing them to load much faster for presentations.</inlineHelpText>
    <label>Enable Mock Image Caching</label>
    <type>Checkbox</type>
</CustomField>