force-app/main/default/objects/ltng_mockupSettings__c/fields/Max_Search_Results__c.field-meta.xml
<CustomField>
    <fullName>Max_Search_Results__c</fullName>
    <defaultValue>100</defaultValue>
    <inlineHelpText>Maximum number of results to return when searching for files or static resources.</inlineHelpText>
    <label>Max Search Results</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>