force-app/main/default/objects/ltng_mockupSettings__c/fields/Mock_Image_File_Filter__c.field-meta.xml
<CustomField>
    <fullName>Mock_Image_File_Filter__c</fullName>
    <defaultValue>&quot;Mock&quot;</defaultValue>
    <inlineHelpText>If provided, only file with titles that include this text will be shown in the Mockup File Image App Builder selection.</inlineHelpText>
    <label>Mock Image File Filter</label>
    <length>50</length>
    <type>Text</type>
</CustomField>